--- a/neighborhood.html
+++ b/neighborhood.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <a href="#main-content" class="skip-link">Skip to Main Content</a>
+
   <header>
     <nav>
       <ul>
@@ -21,7 +23,7 @@
     <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
     <h1>Neighborhood Walks</h1>
   </header>
-  <main>
+  <main id="main-content">
     <div>
       <img src="images/bend_in_the_road.png"
         alt="a purple tree stands in contrast to the green leaved trees along a bend in the road" width="100">
